[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/theme.tres" type="Theme" id=1]
[ext_resource path="res://avatares/erick.png" type="Texture" id=2]
[ext_resource path="res://scripts/Favoritos.gd" type="Script" id=3]
[ext_resource path="res://avatares/kevin.png" type="Texture" id=4]
[ext_resource path="res://avatares/jefferson.png" type="Texture" id=5]
[ext_resource path="res://avatares/felipe.png" type="Texture" id=6]
[ext_resource path="res://avatares/ashly.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.180392, 0.823529, 0.156863, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.376471, 0.584314, 0.768627, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Favoritos" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnVolver" type="Button" parent="."]
margin_left = 35.0
margin_top = 35.0
margin_right = 110.0
margin_bottom = 81.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Volver"
__meta__ = {
"_edit_lock_": true
}

[node name="Titulo" type="Label" parent="."]
margin_left = 257.0
margin_top = 37.0
margin_right = 395.0
margin_bottom = 70.0
rect_scale = Vector2( 2.5, 2.5 )
text = "Favoritos"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="User1" type="Control" parent="."]
margin_left = 165.0
margin_top = 342.0
margin_right = 201.0
margin_bottom = 382.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User1"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User1"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Ashly"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User1"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "2 cosas
$10.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User1"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr1" type="Button" parent="User1"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="User2" type="Control" parent="."]
margin_left = 365.0
margin_top = 337.0
margin_right = 401.0
margin_bottom = 377.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User2"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User2"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Erick"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User2"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "3 cosas
$1.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User2"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr2" type="Button" parent="User2"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="User3" type="Control" parent="."]
margin_left = 558.0
margin_top = 337.0
margin_right = 594.0
margin_bottom = 377.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User3"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User3"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Felipe"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User3"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "6 cosas
$2.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User3"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr3" type="Button" parent="User3"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="User4" type="Control" parent="."]
margin_left = 158.0
margin_top = 649.0
margin_right = 194.0
margin_bottom = 689.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User4"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User4"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Jefferson"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User4"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "0 cosas
$0"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User4"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr4" type="Button" parent="User4"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="User5" type="Control" parent="."]
margin_left = 362.0
margin_top = 642.0
margin_right = 398.0
margin_bottom = 682.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User5"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User5"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Kevin"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User5"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "8 cosas
$12.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User5"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr5" type="Button" parent="User5"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="User6" type="Control" parent="."]
visible = false
margin_left = 557.0
margin_top = 642.0
margin_right = 593.0
margin_bottom = 682.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User6"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User6"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Erick"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User6"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "3 cosas
$1.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User6"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr6" type="Button" parent="User6"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="User7" type="Control" parent="."]
visible = false
margin_left = 160.0
margin_top = 943.0
margin_right = 196.0
margin_bottom = 983.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User7"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User7"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Erick"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User7"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "3 cosas
$1.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User7"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr7" type="Button" parent="User7"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="User8" type="Control" parent="."]
visible = false
margin_left = 364.0
margin_top = 936.0
margin_right = 400.0
margin_bottom = 976.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User8"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User8"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Erick"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User8"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "3 cosas
$1.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User8"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr8" type="Button" parent="User8"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="User9" type="Control" parent="."]
visible = false
margin_left = 559.0
margin_top = 936.0
margin_right = 595.0
margin_bottom = 976.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User9"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User9"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Erick"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User9"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "3 cosas
$1.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User9"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr9" type="Button" parent="User9"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUp" type="Button" parent="."]
margin_left = 67.0
margin_top = 1241.0
margin_right = 80.0
margin_bottom = 1382.0
rect_rotation = -90.0
rect_scale = Vector2( 4, 4 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "<"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnDown" type="Button" parent="."]
margin_left = 76.0
margin_top = 215.0
margin_right = 89.0
margin_bottom = 356.0
rect_rotation = -90.0
rect_scale = Vector2( 4, 4 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = ">"
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="BtnVolver" to="." method="_on_BtnVolver_pressed"]
[connection signal="pressed" from="User1/BtnUsr1" to="." method="_on_BtnUsr1_pressed"]
[connection signal="pressed" from="User2/BtnUsr2" to="." method="_on_BtnUsr2_pressed"]
[connection signal="pressed" from="User3/BtnUsr3" to="." method="_on_BtnUsr3_pressed"]
[connection signal="pressed" from="User4/BtnUsr4" to="." method="_on_BtnUsr4_pressed"]
[connection signal="pressed" from="User5/BtnUsr5" to="." method="_on_BtnUsr5_pressed"]
[connection signal="pressed" from="User6/BtnUsr6" to="." method="_on_BtnUsr6_pressed"]
[connection signal="pressed" from="User7/BtnUsr7" to="." method="_on_BtnUsr7_pressed"]
[connection signal="pressed" from="User8/BtnUsr8" to="." method="_on_BtnUsr8_pressed"]
[connection signal="pressed" from="User9/BtnUsr9" to="." method="_on_BtnUsr9_pressed"]
[connection signal="pressed" from="BtnUp" to="." method="_on_BtnUp_pressed"]
[connection signal="pressed" from="BtnDown" to="." method="_on_BtnDown_pressed"]
